project skel for uniq

--- a/uniq/Cargo.toml
+++ b/uniq/Cargo.toml
@@ -2,7 +2,7 @@
 name = "uniq"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "Report or filter out repeated lines in a file"
 
 [dependencies]
+structopt = "0.3"
