--- a/.github/workflows/header_license.yml
+++ b/.github/workflows/header_license.yml
@@ -11,8 +11,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2.3.4
       - name: Add comments to src/
-        uses: koj-co/header-comments
+        uses: koj-co/header-comments@v1.0.5
         with:
-          directory: src
+          directory: '**/src'
       - name: Create commit with changes
         uses: stefanzweifel/git-auto-commit-action@v4
