--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -2,14 +2,13 @@ header:
   license:
     spdx-id: MIT
     copyright-owner: Facebook
+    content: |
+      Copyright (c) Facebook, Inc. and its affiliates.
 
-  paths-ignore:
-    - 'licenses'
-    - '**/*.md'
-    - 'LICENSE'
-    - 'NOTICE'
-    - '**/*.toml'
-    - '*.toml'
-    - '*.md'
+      This source code is licensed under the MIT license found in the
+      LICENSE file in the root directory of this source tree.
+  
+  paths:
+    - "**/*.rs"
 
   comment: on-failure
