--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -7,5 +7,12 @@ header:
 
       This source code is licensed under the MIT license found in the
       LICENSE file in the root directory of this source tree.
+      
+  paths-ignore:
+    - 'dist'
+    - 'licenses'
+    - '**/*.md'
+    - 'LICENSE'
+    - 'NOTICE'
 
   comment: on-failure
