--- a/.github/workflows/headers.yml
+++ b/.github/workflows/headers.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
     - name: Fix License Header
       uses: apache/skywalking-eyes@main
       with:
