--- a/.github/workflows/headers.yml
+++ b/.github/workflows/headers.yml
@@ -16,12 +16,5 @@ jobs:
       uses: apache/skywalking-eyes@main
       with:
         mode: fix
-
-    - name: Apply Changes
-      uses: EndBug/add-and-commit@v4
-      with:
-        author_name: License Bot
-        author_email: license_bot@github.com
-        message: 'Automatic application of license header'
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Create commit with changes
+      uses: stefanzweifel/git-auto-commit-action@v4
