--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -8,6 +8,9 @@ header:
       This source code is licensed under the MIT license found in the
       LICENSE file in the root directory of this source tree.
       
+  paths:
+    - '*.rs'
+      
   paths-ignore:
     - 'dist'
     - 'licenses'
