--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -25,7 +25,7 @@ header:
     - '.prettierignore'
     - '.vimrc'
     - '.whitesource'
-    - 'rust_toolchain'
+    - 'rust-toolchain'
 
     - '**/*.md'
     - '**/*.lock'
