--- a/.github/workflows/headers.yml
+++ b/.github/workflows/headers.yml
@@ -16,5 +16,5 @@ jobs:
       uses: apache/skywalking-eyes@main
       with:
         mode: fix
-    - name: Create commit with changes
-      uses: stefanzweifel/git-auto-commit-action@v4
+    - name: Create Pull Request
+      uses: peter-evans/create-pull-request@v3
