--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,6 @@ name = "binutils"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [[bin]]
 name = "uniq"
 path = "src/bin/uniq.rs"
@@ -13,3 +11,8 @@ path = "src/bin/uniq.rs"
 anyhow = "1.0"
 structopt = "0.3"
 thiserror = "1.0"
+itertools = "0.10"
+
+[dev-dependencies]
+pretty_assertions = "1.0"
+test-generator = "0.3"
